fix (map) : z-index sidebar

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,4 +11,8 @@
     .relative {
         position: relative;
     }
+
+    .v-navigation-drawer {
+        z-index: 10;
+    }
 }
